# axor-classifier-simple

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
axor_classifier_simple/: __init__.py  _model_security.py  anomaly_detector.py  task_signal.py  train_anomaly.py  train_task_signal.py
axor_classifier_simple/data/: anomaly_data.py  task_signal_data.py
tests/: test_anomaly_detector.py  test_task_signal.py  test_version.py
